2004-05-31  Bradley Bell  <btb@icculus.org>

	* Info.plist.in, Makefile.am, configure.ac: remove old OSX bundle
	stuff

	* English.lproj/InfoPlist.strings, d2x-Info.plist,
	d2xgl-Info.plist, arch/cocoa/SDLMain.h, arch/cocoa/SDLMain.m,
	d2x.xcode/project.pbxproj: added XCode project files

2004-05-22  Bradley Bell  <btb@icculus.org>

	* configure.ac, arch/ogl/ogl.c, misc/Makefile.am: make libpng
	optional

	* rpm/d2x.spec.in: Changed descriptions

2004-05-22  Matthew Mueller  <donut@dakotacom.net>

	* arch/ogl/gr.c: fix compile when GL_NV_register_combiners isn't
	defined (d1x r1.40)

	* arch/win32/digi.c: fix strict-aliasing errors (d1x r1.13)

	* arch/win32/digi.c, arch/win32/key.c: Fix mismatched arg types in
	the win32 code (d1x r1.8, key_arch.c r1.2)

	* arch/ogl/sdlgl.c, arch/ogl/wgl.c, main/inferno.c: made opengl
	use 32bpp screen mode by default, add option to use 16bpp (d1x
	r1.4, r1.16, r1.34)

	* arch/ogl/ogl.c: allow for texture dimensions of 1, and fix ogl
	replacement texture paletted->rgb conversion alpha problem (d1x
	r1.43)

	* arch/ogl/ogl.c, include/pngfile.h, main/piggy.c, main/piggy.h,
	misc/Makefile.am, misc/pngfile.c: add opengl replacement texture
	support (requires libpng and zlib) (d1x r1.42, r1.1, r1.10, r1.4,
	r1.1)

	* arch/ogl/gr.c, include/loadgl.h: fix win32
	GL_NV_register_combiners build stuff (d1x r1.39, r1.7)

	* arch/ogl/gr.c, arch/ogl/ogl.c, include/loadgl.h,
	include/ogl_init.h, main/render.c: opengl hardware
	super-transparency support using GL_NV_register_combiners (d1x
	r1.38, r1.41, r1.6, r1.26, r1.7)

2004-05-22  Bradley Bell  <btb@icculus.org>

	* arch/ogl/internal.h, include/gr.h, include/ogl_init.h: function
	prototypes

2004-05-22  Matthew Mueller  <donut@dakotacom.net>

	* 2d/font.c, arch/ogl/gr.c, arch/ogl/internal.h, arch/ogl/ogl.c,
	include/ogl_init.h: use GL_RGB for non-transparent textures, and
	fix fonts not having transparent flag set (wouldn't get paletted)
	(d1x r1.15, r1.37, r1.40, r1.25)
