@@ -1,5 +1,8 @@
 2004-05-31  Bradley Bell  <btb@icculus.org>
 
+	* 2d/pixel.c, arch/ogl/ogl.c, include/pstypes.h,
+	include/strutil.h, libmve/mveplay.c: XCode compilability fixes
+
 	* Info.plist.in, Makefile.am, configure.ac: remove old OSX bundle
 	stuff
 
